syntax = "proto3";

option csharp_namespace = "ISSA_IdentityService.Protos.Admin";

import "Protos/Admin/admin_query.proto";
import "Protos/Admin/admin_command.proto";
import "Protos/Admin/admin.proto";
import "google/api/annotations.proto";

service AdminService {
	rpc GetById (GetQuery) returns (GetResponse)
	{
		option (google.api.http) = {
			get: "/api/admin/{id}"
		};
	}
	rpc Get (GetPagiQuery) returns (GetPagiResponse);
	rpc Create (CreateAdminCommand) returns ( CreateAdminResponse );
	rpc Update (UpdateAdminCommand) returns ( UpdateAdminResponse );
	rpc Delete (DeleteAdminCommand) returns ( DeleteAdminResponse );
}